# da-python-p10

./: .flake8  README.md  pyproject.toml  requirements.txt
softdesk/: .coverage  db.sqlite3
softdesk/authentication/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
softdesk/authentication/migrations/: 0001_initial.py
softdesk/projectsapp/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
softdesk/projectsapp/migrations/: 0001_initial.py  0002_alter_issue_assigned_to.py  0002_project_contributors_alter_contributor_project_and_more.py
softdesk/softdesk/: settings.py  urls.py
